# sqlalchemy-deprecated-column

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/sqlalchemy_deprecated_column/: __init__.py  deprecate_field.py  deprecated_column.py
tests/: conftest.py  test_access.py  test_sql_output.py
tests/alembic/: conftest.py  test_column_properties.py  test_migration_diff.py
