[project]
name = "sqlalchemy-deprecated-column"
version = "0.1.4"
description = "Utility to mark SQLAlchemy ORM columns as deprecated to allow removing them in a backwards compatible manner."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Jakub Bacic", email = "jakub.bacic@gmail.com" }
]
keywords = [
    "sqlalchemy",
    "orm",
    "migration",
    "deprecation",
    "column",
    "alembic",
    "backward compatibility",
]
dependencies = [
    "sqlalchemy>=2.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/jakub-bacic/sqlalchemy-deprecated-column"
Issues = "https://github.com/jakub-bacic/sqlalchemy-deprecated-column/issues"
Changelog = "https://github.com/jakub-bacic/sqlalchemy-deprecated-column/blob/main/CHANGELOG.md"


[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
pythonVersion = "3.10"
strict = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
